// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Top buttons component renders correctly if logged in 1`] = `
<header
  className="clearfix mb2"
>
  <div
    className="right h5"
  >
    <Btn
      extraCss={null}
      kind="primary"
      onClick={[Function]}
      size="small"
    >
      State dashboard
    </Btn>
    <Btn
      extraCss="ml1"
      kind="primary"
      onClick={[Function]}
      size="small"
    >
      Log out
    </Btn>
  </div>
</header>
`;

exports[`Top buttons component renders correctly if logged out 1`] = `
<header
  className="clearfix mb2"
>
  <div
    className="right h5"
  >
    <Link
      className="btn btn-primary btn-small"
      replace={false}
      to="/login"
    >
      Log in
    </Link>
  </div>
</header>
`;

exports[`Top buttons component renders correctly with dashboard hidden 1`] = `
<header
  className="clearfix mb2"
>
  <div
    className="right h5"
  >
    <Btn
      extraCss="ml1"
      kind="primary"
      onClick={[Function]}
      size="small"
    >
      Log out
    </Btn>
  </div>
</header>
`;
